--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -47,7 +47,7 @@
     * [Code#Source_code Source code]
       * [Code#Doxygen_documentation doxygen-generated documentation]
     * [BuildSystem Building and Testing]
-      * [WindowsBuildOpenMalaria Windows]
-      * [UnixBuildOpenMalaria Linux]
-      * [MacBuildOpenMalaria Mac]
-	  [TestSystem Testing your OpenMalaria build]
+      * [WindowsBuildOpenMalaria Building on Windows]
+      * [UnixBuildOpenMalaria  building on Linux]
+      * [MacBuildOpenMalaria builging on Mac]
+      * [TestSystem Testing your build]
