Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2463 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -48,6 +48,6 @@
       * [Code#Doxygen_documentation doxygen-generated documentation]
     * [BuildSystem Building and Testing]
       * [WindowsBuildOpenMalaria Building on Windows]
-      * [UnixBuildOpenMalaria  building on Linux]
-      * [MacBuildOpenMalaria builging on Mac]
+      * [UnixBuildOpenMalaria  Building on Linux]
+      * [MacBuildOpenMalaria Building on Mac]
       * [TestSystem Testing your build]
