--- a/wiki/References.wiki
+++ b/wiki/References.wiki
@@ -41,6 +41,8 @@
 
 [http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0032587 Simulated Impact of RTS,S/AS01 Vaccination Programs in the Context of Changing Malaria Transmission]
 
+[http://www.malariajournal.com/content/11/1/357/abstract Simulation of malaria epidemiology and control in the highlands of western Kenya]
+
 = Offline Documentation =
 
 In case you wish to have access to the documentation on this wiki without an internet connection, you can download and extract the following:
